ai-helpdesk-app/k8s/chat-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    io.kompose.service: chat-service
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: chat-service
